--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -9,36 +9,55 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
    <title>Community Garden</title>
-        </head>
-        <body>
-            <div id=wrapper>
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a class="navbar-brand" href="#">Community Garden</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="/">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/information">Information</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/volunteer">Volunteer</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/contact">Contact<span class="sr-only">(current)</span></a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
+    </head>
+    <body>
+        <div id=wrapper>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="#">Community Garden</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="/information">Information</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="/volunteer">Volunteer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">Contact<span class="sr-only">(current)</span></a>
+                     </li>
+                 </ul>
+            </div>
+            </nav>
+             <!-- JumboTron-->
+            <div class="jumbotron">
+                <h1 class="display-4">The Community Garden</h1>
+                <p class="lead">Contact</p>
+            </div>
 
-                <div class="jumbotron">
-                    <h1 class="display-4">The Community Garden</h1>
-                    <p class="lead">Contact</p>
+            <!-- Contact Form-->
+            <center><form style="Width:800px;" action="/sendEmail" method="POST">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Email address</label>
+                    <input name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                 </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Message</label>
+                    <textarea name="message" class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
+                </div>
+                <button type="submit">send mail</button>
+                <p>
+
+                </p>
+            </form></center>
+
+
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -51,5 +70,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
-  </body>
+    </body>
 </html>
