--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -40,6 +40,11 @@
                     <p class="lead">Volunteer</p>
                 </div>
 
+                <div class="row">
+                    <div class="col-lg-4">Column left</div>
+                    <div class="col-lg-4">Column middle</div>
+                    <div class="col-lg-4">Column right</div>
+                </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
