--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -40,14 +40,22 @@
                 <p class="lead">Contact</p>
             </div>
 
+            <div>
+                <b><center><p> Fill out the form below and we will get back to you shortly!</p></center></div></b>
+            </div>
+
             <!-- Contact Form-->
             <center><form style="Width:800px;" action="/sendEmail" method="POST">
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">Email address</label>
+                    <b><label for="exampleFormControlInput">Name</label></b>
+                    <input name="Name" type="Name" class="form-control" id="exampleFormControlInput" placeholder="John Doe">
+                </div>
+                <div class="form-group">
+                    <b><label for="exampleFormControlInput1">Email address</label></b>
                     <input name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Message</label>
+                    <b><label for="exampleFormControlTextarea1">Message</label></b>
                     <textarea name="message" class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
                 </div>
                 <button type="submit">send mail</button>
