--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -41,9 +41,9 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-4">Column left</div>
-                    <div class="col-lg-4">Column middle</div>
-                    <div class="col-lg-4">Column right</div>
+                    <div class="col-lg-4"><img src="/public/images/Water.png"></div>
+                    <div class="col-lg-4"><img src="/public/images/Maintinance.png"></div>
+                    <div class="col-lg-4"><img src="/public/images/CleanUp.png"></div>
                 </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
