--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -41,15 +41,9 @@
                 </div>
 
                 <div class="row">
-                    <div class="column">
-                        <img src="/public/images/Water.png">
-                    </div>
-                    <div class="column">
-                        <img src="/public/images/Maintinance.png">
-                    </div>
-                    <div class="column">
-                        <img src="/public/images/CleanUp.png">
-                    </div>
+                    <div class="column">Water</div>
+                    <div class="column">Maintenance</div>
+                    <div class="column">Clean-Up</div>
                 </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
