--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
+    <link href="css/styles.css" rel="stylesheet">
 <title>Community Garden</title>
         </head>
         <body>
@@ -40,11 +40,18 @@
                     <p class="lead">Volunteer</p>
                 </div>
 
-                <div class="row">
-                    <div class="column">Water</div>
-                    <div class="column">Maintenance</div>
-                    <div class="column">Clean-Up</div>
+                <div class="container">
+                    <div class="left">
+                        <h1></h1>
+                    </div>
+                    <div class="center">
+                        <h1></h1>
+                    </div>
+                    <div class="right">
+                        <h1></h1>
+                    </div>
                 </div>
+                
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
