working on info page

--- a/views/information.ejs
+++ b/views/information.ejs
@@ -41,7 +41,37 @@
         </div>
         
     <!--carosuel-->
-        <%= data.description%>
+    
+    <div id="carouselExampleControls" class="carousel slide" data-mdb-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+        <img
+            src=" <%= data.image_url%> "
+            class="d-block w-100"
+            alt="..."
+        />
+        </div>
+    </div>
+    <a
+        class="carousel-control-prev"
+        href="#carouselExampleControls"
+        role="button"
+        data-mdb-slide="prev"
+    >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </a>
+    <a
+        class="carousel-control-next"
+        href="#carouselExampleControls"
+        role="button"
+        data-mdb-slide="next"
+    >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+     </a>
+  </div>
+  
 
 
 
