--- a/views/information.ejs
+++ b/views/information.ejs
@@ -41,39 +41,28 @@
         </div>
         
     <!--carosuel-->
-    
-    <div id="carouselExampleControls" class="carousel slide" data-mdb-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-        <img
-            src=" <%= data.image_url%> "
-            class="d-block w-100"
-            alt="..."
-        />
-        </div>
-    </div>
-    <a
-        class="carousel-control-prev"
-        href="#carouselExampleControls"
-        role="button"
-        data-mdb-slide="prev"
-    >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </a>
-    <a
-        class="carousel-control-next"
-        href="#carouselExampleControls"
-        role="button"
-        data-mdb-slide="next"
-    >
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-     </a>
-  </div>
+     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                <img class="d-block w-100" src= " <%= data.image_url%> "
+                alt=" Tomato ">
+                <!--caption-->
+                <div class="carousel-caption d-none d-md-block">
+                    <h5><%= data.name %> </h5>
+                    <p><%= data.description %> </p>
+                </div>
+                </div>
+            <!--
+               <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                <img class="d-block w-100" src="..." alt="Third slide">
+                </div>
+            -->
+            </div>
+     </div>
   
-
-
 
     <!-- Optional JavaScript; choose one of the two! -->
 
