--- a/views/information.ejs
+++ b/views/information.ejs
@@ -44,7 +44,7 @@
      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                <img class="d-block w-100" src= " <%= data.image_url%> "
+                <img   class="d-block w-100" src= "/images/veg/tomato.jpg "
                 alt=" Tomato ">
                 <!--caption-->
                 <div class="carousel-caption d-none d-md-block">
@@ -52,14 +52,24 @@
                     <p><%= data.description %> </p>
                 </div>
                 </div>
-            <!--
+            
                <div class="carousel-item">
-                <img class="d-block w-100" src="..." alt="Second slide">
+                <img class="d-block w-100" src="/images/veg/lettuce.jpg " alt="Lettuce">
+                 <!--caption-->
                 </div>
                 <div class="carousel-item">
-                <img class="d-block w-100" src="..." alt="Third slide">
+                <img class="d-block w-100" src="/images/veg/cilantro.jpg " alt="Cilantro">
                 </div>
-            -->
+                <!-- controls-->
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+        
             </div>
      </div>
   
