--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,4 +27,14 @@
    .container:after {
       clear: both;
    }
-
+   #popup {
+      width: 320px;
+      height: 300px;
+      margin: 0 auto;
+      box-shadow: 1px 1px 1px 1px black;
+      display: none;
+    }
+    #popup iframe {
+      width: 100%;
+      height: 100%
+    }
