--- a/views/information.ejs
+++ b/views/information.ejs
@@ -40,38 +40,57 @@
              <p class="lead">Information</p>
         </div>
         
-    <!--carosuel-->
-     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                <img   class="d-block w-100" src= "/images/veg/tomato.jpg "
-                alt=" Tomato ">
-                <!--caption-->
-                <div class="carousel-caption d-none d-md-block">
-                    <h5><%= data.name %> </h5>
-                    <p><%= data.description %> </p>
-                </div>
-                </div>
-            
-               <div class="carousel-item">
-                <img class="d-block w-100" src="/images/veg/lettuce.jpg " alt="Lettuce">
-                 <!--caption-->
-                </div>
-                <div class="carousel-item">
-                <img class="d-block w-100" src="/images/veg/cilantro.jpg " alt="Cilantro">
-                </div>
-                <!-- controls-->
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-        
+    <!--Gallery-->
+    <div class="container">
+    <img src="/images/veg/tomato.jpg" alt="Avatar" class="image" style="width:100%">
+        <div class="middle">
+            <div class="text"><%= data.name%>
+               <br> Learn More </br>
             </div>
-     </div>
+        </div>
+    </div>
+
+    <style>
+        .container {
+        position: relative;
+        width: 50%;
+        }
+
+        .image {
+        opacity: 1;
+        display: block;
+        width: 100%;
+        height: auto;
+        transition: .5s ease;
+        backface-visibility: hidden;
+        }
+
+        .middle {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+        }
+
+        .container:hover .image {
+        opacity: 0.3;
+        }
+
+        .container:hover .middle {
+        opacity: 1;
+        }
+
+        .text {
+        background-color: #4CAF50;
+        color: white;
+        font-size: 16px;
+        padding: 16px 32px;
+        }
+    </style>
   
 
     <!-- Optional JavaScript; choose one of the two! -->
