updated volunteer page

--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -44,6 +44,7 @@
                 <div id="popup">
                     <iframe id="popupFrame" src=""></iframe>
                   </div>
+                  
 
                 <div class="container">
                     <div class="left">
@@ -57,7 +58,7 @@
                     </div>
                 </div>
                 
-                <div id="calendar"></div>
+                <div class="calendar"></div>
                     <p align="center "><iframe src="https://calendar.google.com/calendar/embed?src=projectgarden706%40gmail.com&ctz=America%2FNew_York" style="border: 10" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
                 
     <!-- Optional JavaScript; choose one of the two! -->
