--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,7 @@
       background-image: url("/images/Water.png");
       background-position: center;
       background-size: cover;
+      
    }
    .right {
       background-image: url("/images/CleanUp.png");
@@ -37,4 +38,8 @@
     #popup iframe {
       width: 100%;
       height: 100%
+    }
+
+    .calendar{
+       background-color: cadetblue;
     }
