working on info

--- a/views/information.ejs
+++ b/views/information.ejs
@@ -43,7 +43,7 @@
     <!--Gallery-->
     <div class="row">
         <div class="column">
-            <img src="/images/veg/tomato.jpg" alt="Tomato" style="width:50%; margin-left: 20%;" onmouseover='$("#div_content").show();' onmouseout='$("#div_content").hide();' >
+            <img src="/images/veg/tomato.jpg" alt="Tomato" style="width:70%; margin-left: 30%;" onmouseover='$("#div_content").show();' onmouseout='$("#div_content").hide();' >
             <!-- Overlay-->
             <center><div id="div_content" style='display:none;'><b>Name:</b><%= data.name %>
             <br> <b>Description:</b> <%= data.description %> </br>
@@ -53,23 +53,23 @@
         </div>
 
         <div class="column">
-            <img src="/images/veg/lettuce.jpg" alt="Lettuce" style="width:50%; margin-left: auto; margin-right:auto;">
+            <img src="/images/veg/lettuce.jpg" alt="Lettuce" style="width:70%; margin-left:17%;">
         </div>
 
         <div class="column">
-            <img src="/images/veg/cilantro.jpg" alt="Cilantro" style="width:50%; margin-right: 20%;">
+            <img src="/images/veg/cilantro.jpg" alt="Cilantro" style="width:70%; margin-left:auto; margin-right: 30%;">
         </div>
 
         <div class="column">
-            <img src="/images/veg/carrot.jpg" alt="carrot" style="width:50%; margin-left: 20%;">
+            <img src="/images/veg/carrot.jpg" alt="carrot" style="width:70%; margin-left: 30%; margin-right:auto;">
         </div>
 
         <div class="column">
-            <img src="/images/veg/Broccoli.jpg" alt="Lettuce" style="width:50%">
+            <img src="/images/veg/Broccoli.jpg" alt="Broccoli" style="width:70%; margin-left:17%;">
         </div>
 
         <div class="column">
-            <img src="/images/veg/bell_peppers.jpg" alt="Cilantro" style="width:50%; margin-right: 20%;">
+            <img src="/images/veg/bell_peppers.jpg" alt="Cilantro" style="width:70%; margin-right:30%; margin-left:auto;">
         </div>
 
     </div>
@@ -95,12 +95,10 @@
         #div_content{
         position: absolute;
         background-color: #fff8c2;
-        top: 80%;
-        left: 60%;
-        right:50%;
-        width: 30%;
+        width: 50%;
         height: absolute;
-        margin: -25% 0 0 -25%; /* should be -50% of width/height. */
+        left:27%;
+        top:60%;
     }
     
     </style>
