--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -58,9 +58,12 @@
                     </div>
                 </div>
                 
-                <div class="calendar"></div>
-                    <p align="center "><iframe src="https://calendar.google.com/calendar/embed?src=projectgarden706%40gmail.com&ctz=America%2FNew_York" style="border: 10" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
-                
+                <div class="calendar">
+                    <p align="center">
+                    <iframe src="https://calendar.google.com/calendar/embed?height=870&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=cHJvamVjdGdhcmRlbjcwNkBnbWFpbC5jb20&amp;color=%2333B679&amp;showTitle=1&amp;title=Community%20Garden&amp;showPrint=0&amp;showNav=1&amp;showCalendars=0&amp;showTz=0" style="border-width:0" width="950" height="870" frameborder="0" scrolling="no">
+                    </iframe>
+                    </p>
+                </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
