updated home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,13 +13,8 @@
         </head>
         <body>
             <div id=wrapper>
-<<<<<<< HEAD
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                    <a class="navbar-brand" href="/">Community Garden</a>
-=======
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">Community Garden</a>
->>>>>>> main
+                    <a class="navbar-brand" href="/">Community Garden</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -44,15 +39,10 @@
                 <div class="jumbotron">
                     <h1 class="display-4">The Community Garden</h1>
                     <p class="lead">Rent a Plot!</p>
-<<<<<<< HEAD
+                </div>
                     <div class="box">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg
-=======
-                    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-                 </div>
-<svg
->>>>>>> main
    xmlns:dc="http://purl.org/dc/elements/1.1/"
    xmlns:cc="http://creativecommons.org/ns#"
    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -112,7 +102,7 @@
      id="layer6"
      inkscape:label="Layer1">
     <rect
-       style="fill:#dbe3e2;fill-opacity:1;stroke-width:0.245771"
+       style="fill:#ffffff;fill-opacity:1;stroke-width:0.245771"
        id="rect323"
        width="209.77695"
        height="152.36429"
@@ -522,7 +512,7 @@
      type="text/css"
      id="style117">
 .plot { 
-    fill:#98FB98;
+    fill:#ABC663;
     stroke-width:0.264583;
 }
   .plot-highlight{
@@ -556,7 +546,7 @@
         }
   </script>
   <rect
-     style="opacity:1;fill:#d4ff2a;stroke-width:0.253227"
+     style="opacity:1;fill:#FFF8C2 ;stroke-width:0.253227"
      id="rect124"
      width="10.01911"
      height="18.989017"
@@ -1408,8 +1398,7 @@
     </div>
   </div>
 </div>
-                </div>
-            </div>    
+                </div>    
         <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
