--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,3 +48,23 @@
     justify-content: center;
    }
 
+
+.column-2 {
+  float: left;
+  width: 45%;
+  padding: 40px;
+  padding-left:70px;
+  padding-right: 70px;
+  height: 475px;
+  margin:30px;
+  margin-right:30px;
+  margin-bottom: 70px;
+  background-color: #FFF8C2;
+  line-height:2;
+}
+
+.large-profile {
+  background: url('../images/fillerPic.png');
+  background-size: cover;
+  background-position: center;
+}
