--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -41,29 +41,38 @@
                 <p class="lead">Contact</p>
             </div>
 
+            <div id = "form" style= "background-color: #7895A4; padding-bottom: 10px; ">
             <div>
-                <b><center><p> Fill out the form below and we will get back to you shortly!</p></center></div></b>
-            </div>
+                <b><center><p style = "font-size: 20px;"> Fill out the form below and we will get back to you shortly!</p></center></div></b>
 
             <!-- Contact Form-->
-            <center><form style="Width:800px;" action="/sendEmail" method="POST">
-                <div class="form-group">
-                    <b><label for="exampleFormControlInput">Name</label></b>
-                    <input name="Name" type="Name" class="form-control" id="exampleFormControlInput" placeholder="John Doe">
-                </div>
-                <div class="form-group">
-                    <b><label for="exampleFormControlInput1">Email address</label></b>
-                    <input name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                </div>
-                <div class="form-group">
-                    <b><label for="exampleFormControlTextarea1">Message</label></b>
-                    <textarea name="message" class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
-                </div>
-                <button type="submit">send mail</button>
-                <p>
+                <center><form style="Width:800px;" action="/sendEmail" method="POST">
+                    <div class="form-group">
+                        <b><label for="exampleFormControlInput">Name</label></b>
+                        <input name="Name" type="Name" class="form-control" id="exampleFormControlInput" placeholder="John Doe">
+                    </div>
+                    <div class="form-group">
+                        <b><label for="exampleFormControlInput1">Email address</label></b>
+                        <input name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                        <b><label for="exampleFormControlTextarea1">Message</label></b>
+                        <textarea name="message" class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
+                    </div>
+                    <button style ="background-color: #9E3A34; font-size: 25px; " type="submit">Submit</button>
+                    <p>
 
-                </p>
-            </form></center>
+                    </p>
+                </form></center>
+                    </div>
+
+            <!--ABout me section-->
+            <div class="column-2">
+                <h1>About me</h1>
+            </div>
+
+            <div class="column-2 large-profile"></div>
+
 
 
     
