--- a/views/information.ejs
+++ b/views/information.ejs
@@ -56,6 +56,7 @@
 
         <div class="column">
             <img src="/images/veg/lettuce.jpg" alt="Lettuce" style="width:70%; margin-left:17%;">
+            
         </div>
 
         <div class="column">
@@ -68,6 +69,11 @@
 
         <div class="column">
             <img src="/images/veg/Broccoli.jpg" alt="Broccoli" style="width:70%; margin-left:17%;">
+              <center><div id="div_content" style='display:none;'><b>Name:</b><%= data.name %>
+             <br> <b>Description:</b> <%= data.description %> </br>
+             <br> <b>When to plant:</b> <%= data.when_to_plant %> </br>
+             </div>
+            </center> 
         </div>
 
         <div class="column">
