--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
-
+    <link rel= "stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Community Garden</title>
         </head>
         <body>
@@ -35,7 +37,6 @@
                         </ul>
                     </div>
                 </nav>
-
                 <div class="jumbotron">
                     <h1 class="display-4">The Community Garden</h1>
                     <p class="lead">Rent a Plot!</p>
@@ -50,8 +51,8 @@
    xmlns="http://www.w3.org/2000/svg"
    xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
    xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-   width="210mm"
-   height="297mm"
+   width="315mm"
+   height="446mm"
    viewBox="0 0 210 297"
    version="1.1"
    id="svg8"
@@ -1421,15 +1422,18 @@
     <label for="chosenCrop">Plant you are growing</label>
     <textarea class="form-control" id="chosenCrop" rows="1"></textarea>
   </div>
-  <div class="md-form mx-5 my-5">
-    <label for="inputMDEx">Choose your date</label>
-  <input type="datetime-local" id="inputMDEx" class="form-control">
+  <div class="input-group date" id="datetimepicker1">
+    <label for="picker">Choose your date</label>
+  <input type="text" id="picker" class="form-control">
+  <span class="input-group-addon">
+    <span class="glyphicon glyphicon-calendar"></span>
+    </span>
 </div>
-</form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button id="subbtn" type="submit" data-dismiss="modal" class="btn btn-primary">submit</button>
+      </form>
       </div>
     </div>
   </div>
@@ -1440,6 +1444,10 @@
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
     <script>
         $('#modalForm').on('show.bs.modal', function (event) {
         var button = $(event.relatedTarget) // Button that triggered the modal
@@ -1448,7 +1456,13 @@
         // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
         var modal = $(this)
         modal.find('.modal-body #plotnumber').val(recipient)
-})
+    })
+
+  $(function() {
+            $('#datetimepicker1').datetimepicker();
+        });
+
+    
     </script>
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
