--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -41,7 +41,7 @@
                 <p class="lead">Contact</p>
             </div>
 
-            <div id = "form" style= "background-color: #7895A4; padding-bottom: 10px; ">
+            <div id = "form" style= "padding-bottom: 10px; ">
             <div>
                 <b><center><p style = "font-size: 20px;"> Fill out the form below and we will get back to you shortly!</p></center></div></b>
 
@@ -59,7 +59,7 @@
                         <b><label for="exampleFormControlTextarea1">Message</label></b>
                         <textarea name="message" class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
                     </div>
-                    <button style ="background-color: #9E3A34; font-size: 25px; " type="submit">Submit</button>
+                    <button type="button" id="modalBtn" class="btn btn-light" font-size="40px">Submit</button>
                     <p>
 
                     </p>
