--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -19,14 +19,14 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="/">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/information">Information</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/volunteer">Volunteer<span class="sr-only">(current)</span></a>
+                                <a class="nav-link active" href="/volunteer">Volunteer<span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/contact">Contact</a>
