--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -48,9 +48,15 @@
 
                 <div class="container">
                     <div class="left">
-                        <img url="images/CleanUp.png" width="200px" height="200px"></img>
-                        <img url="images/CleanUp.png" width="200px" height="200px"></img>
-                        <img url="images/CleanUp.png" width="200px" height="200px"></img>
+                        <div class="left1">
+                            <h1></h1>
+                        </div>
+                        <div class="left2">
+                            <h1></h1>
+                        </div>
+                        <div class="left3">
+                            <h1></h1>
+                        </div>
                     </div>
                     <div class="center">
                         <div class="calendar">
