--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -48,15 +48,9 @@
 
                 <div class="container">
                     <div class="left">
-                        <div class="left1">
-                            <h1></h1>
-                        </div>
-                        <div class="left2">
-                            <h1></h1>
-                        </div>
-                        <div class="left3">
-                            <h1></h1>
-                        </div>
+                        <img src="images/CleanUp.png" width="300px" height="300px"></img>
+                        <img src="images/Maintinance.png" width="300px" height="300px"></img>
+                        <img src="images/Water.png" width="300px" height="300px"></img>
                     </div>
                     <div class="center">
                         <div class="calendar">
