--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -59,7 +59,7 @@
                         <b><label for="exampleFormControlTextarea1">Message</label></b>
                         <textarea name="message" class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
                     </div>
-                    <button type="button" id="modalBtn" class="btn btn-light" font-size="40px">Submit</button>
+                    <button type="submit" id="modalBtn" class="btn btn-light" font-size="40px">Submit</button>
                     <p>
 
                     </p>
