fixing button style

--- a/views/information.ejs
+++ b/views/information.ejs
@@ -94,7 +94,7 @@
                         <option value="44">Sweet Potato</option>
                         <option value="45">Dill</option>
                     </select>
-            <input  style=" color:#7895A4" type="submit" value="Show Crop"> 
+            <input  style="color:white; border:none; background-color:#7895A4" type="submit" value="Show Crop"> 
     </style>
 
     <!--Displayin Information-->
