--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -38,7 +38,7 @@
                 <div class="jumbotron">
                     <h1 class="display-4">The Community Garden</h1>
                     <p class="lead">Volunteer</p>
-                    <button type="button" id="modalBtn" class="btn btn-light btn-lg" >VolunteerForm</button>
+                    <button type="button" id="modalBtn" class="btn btn-light btn-lg float-md-right" >VolunteerForm</button>
                 </div>
 
                 <div id="popup">
