mobile form fix

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -46,7 +46,8 @@
                 <b><center><p style = "font-size: 20px;"> Fill out the form below and we will get back to you shortly!</p></center></div></b>
 
             <!-- Contact Form-->
-                <center><form style="Width:800px;" action="/sendEmail" method="POST">
+            
+                <center><form  action="/sendEmail" method="POST" meta name="viewport" content="width=device-width, initial-scale=1.0">
                     <div class="form-group">
                         <b><label for="exampleFormControlInput">Name</label></b>
                         <input name="Name" type="Name" class="form-control" id="exampleFormControlInput" placeholder="John Doe">
