--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -69,7 +69,17 @@
 
             <!--ABout me section-->
             <div class="column-2">
-                <h1>About me</h1>
+                <h1>Alan Titchmarsh</h1>
+                <p>Alan Titchmarsh left school with one O'Level in Art and became an apprentice gardener in Ilkley's Parks Department from 1964 to 1968, and a few years later was supervisor of staff training at the Royal Botanic Gardens.
+
+                Titchmarsh left in 1974 and became an assistant editor of gardening books at Hamlyn, before going on to be Deputy Editor of Amateur Gardening magazine.
+
+                From 1979 he became a freelance writer and broadcaster with significant contributions to amongst other publications: Woman's Own, The Daily Mail, the Daily and Sunday Express, Radio Times, Homes & Gardens, BBC Gardener's World Magazine and Gardenlife.
+
+                Alan Titchmarsh has written more than 40 gardening books, including the best-seller How to be a Gardener. He has also written novels such as Mr MacGregor, The Last Lighthouse Keeper, Only Dad, and Rosie.
+
+                Credit:  https://www.biogs.com/famous/titchmarsh.html            
+            </p>
             </div>
 
             <div class="column-2 large-profile"></div>
