--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,7 +47,7 @@
 }
 
 .large-profile {
-  background: url('../images/fillerPic.png');
+  background: url('../images/gardner.jpg');
   background-size: cover;
   background-position: center;
 }
