added css for mobile friendly

--- a/views/volunteer.ejs
+++ b/views/volunteer.ejs
@@ -55,8 +55,9 @@
                     <div class="center">
                         <div class="calendar">
                             <p align="center">
-                                <iframe src="https://calendar.google.com/calendar/embed?height=870&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=cHJvamVjdGdhcmRlbjcwNkBnbWFpbC5jb20&amp;color=%2333B679&amp;showTitle=1&amp;title=Community%20Garden&amp;showPrint=0&amp;showNav=1&amp;showCalendars=0&amp;showTz=0" style="border-width:0" width="950" height="870" frameborder="0" 
-                                scroling="no"></iframe>
+                                <iframe class="calendarFrame" src="https://calendar.google.com/calendar/embed?height=870&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FNew_York&amp;src=cHJvamVjdGdhcmRlbjcwNkBnbWFpbC5jb20&amp;color=%2333B679&amp;showTitle=1&amp;title=Community%20Garden&amp;showPrint=0&amp;showNav=1&amp;showCalendars=0&amp;showTz=0" 
+                                style="border-width:0" width="950" height="870" 
+                                frameborder="0" scroling="no"></iframe>
                             </p>
                          </div>
                     </div>
