--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,22 +6,20 @@
    .left, .right, .center {
       float: left;
       width: 300px;
-      height: 350px;
-      text-align: center;
    }
    
    .container:after {
       clear: both;
    }
    #popup {
-      width: 670px;
-      height: 600px;
+      width: 550px;
+      height: 510px;
       margin: 0 auto;
       display: none;
     }
     #popup iframe {
       width: 100%;
-      height: 100%
+      height: 100%;
     }
 
    .box{
@@ -53,4 +51,56 @@
 .column{
     background-position: 300px 100px;
 
+}
+
+/* Make the calendar shrink for mobile */
+@media only screen and (max-width: 600px) {
+    div.calendar{
+        position: relative; 
+        width: 550px;
+        height: 550px;
+        padding-bottom: 75%; 
+        overflow: hidden;
+    }
+
+    div.calendar iframe{
+        position: absolute; 
+        top:0; 
+        left: 0; 
+        width: 100%; 
+        height: 100%;
+    }
+}
+
+/* Disable icons when screen shrinks */
+@media only screen and (max-width: 600px) {
+  div.left {
+    display: none;
+  }
+}
+
+/* Make the calendar shrink for mobile */
+@media only screen and (max-width: 1024px) {
+    div.calendar{
+        position: relative; 
+        width: 550px;
+        height: 550px;
+        padding-bottom: 75%; 
+        overflow: hidden;
+    }
+
+    div.calendar iframe{
+        position: absolute; 
+        top:0; 
+        left: 0; 
+        width: 100%; 
+        height: 100%;
+    }
+}
+
+/* Disable icons when screen shrinks */
+@media only screen and (max-width: 1024px) {
+  div.left {
+    display: none;
+  }
 }
