--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,6 +46,7 @@
                     <h1 class="display-4">The Community Garden</h1>
                     <p class="lead">Rent a Plot!</p>
                 </div>
+                    <h3 id="pageDescription">Plots that are green are available. Plots in brown are already rented</h3>
                     <div class="box">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg
